test/functions/iterators/empty-iter.good
empty-iter.chpl:1: error: unable to resolve yielded type of 'foo'
