test/functions/iterators/empty-iter.chpl
iter foo() {}
proc main() {
  var x = foo();
}
